# ffmpeg_libfdkaac_x264

./: README.md
FFmpegApp/: build.gradle
FFmpegApp/app/: build.gradle
FFmpeg_libfdkaac_x264/build_script/: jianxi_ffmpeg_arm64_v8a_build.sh  jianxi_ffmpeg_arm64_v8a_build_more.sh  jianxi_ffmpeg_arm_build.sh  jianxi_ffmpeg_arm_build_more.sh  jianxi_ffmpeg_arm_v7a_build.sh  jianxi_ffmpeg_arm_v7a_build_more.sh  jianxi_ffmpeg_x86_64_build.sh  jianxi_ffmpeg_x86_64_build_more.sh  jianxi_ffmpeg_x86_build.sh  jianxi_ffmpeg_x86_build_more.sh
FFmpeg_libfdkaac_x264/ffmpeg-3.2.5/: config.asm  config.fate  config.h  config.mak  jianxi_ffmpeg_arm64_v8a_build.sh  jianxi_ffmpeg_arm64_v8a_build_more.sh  jianxi_ffmpeg_arm_build.sh  jianxi_ffmpeg_arm_build_more.sh  jianxi_ffmpeg_arm_v7a_build.sh  jianxi_ffmpeg_arm_v7a_build_more.sh  jianxi_ffmpeg_x86_64_build.sh  jianxi_ffmpeg_x86_64_build_more.sh  jianxi_ffmpeg_x86_build.sh  jianxi_ffmpeg_x86_build_more.sh
FFmpeg_libfdkaac_x264/jni/: Android.mk  README.md  fdk_aac_x264_ffmpeg_buildarmv7.sh
FFmpeg_libfdkaac_x264_lame/jni/: Android.mk  README.md  fdk_aac_x264_ffmpeg_buildarmv7.sh
NativeApp/: .gitignore  build.gradle  gradle.properties  import-summary.txt  settings.gradle
NativeApp/app/: CMakeCache.txt  CMakeLists.txt  build.gradle
NativeApp/app/libs/: avcapture-release.aar
NativeApp/app/src/androidTest/java/com/guagua/nativeapp/: ExampleInstrumentedTest.java
NativeApp/app/src/main/: AndroidManifest.xml
NativeApp/app/src/main/cpp/: Jni_Live_Manage.cpp  Jni_Live_Manage.h  aacencodeandpush.cpp  aacencodeandpush.h  arguments.h  base_include.h  h264EncodePush.cpp  h264encodeandpush.cpp  h264encodeandpush.h  jni_debug.cpp  jni_debug.h  jni_encode_aac.cpp  jni_encode_h264.cpp  jni_encode_h264.h  jni_ffmpeg_bridge.cpp  jni_pull_stream.cpp  jni_push_stream.c  main.cpp  native-lib.cpp  threadsafe_queue.cpp  xpush_stream.cpp
NativeApp/app/src/main/cpp/v2/: AudioCapture.cpp  AudioCapture.h  AudioEncodeArgs.h  AudioEncoder.cpp  AudioEncoder.h  Jni_Live_Manage.cpp  Jni_Live_Manage.h  MediaCapture.h  MediaEncoder.h  MediaRtmpStreamer.cpp  MediaRtmpStreamer.h  MediaStreamer.h  OriginData.cpp  OriginData.h  PrefixHeader.h  RtmpStreamer.cpp  RtmpStreamer.h  VideoCapture.cpp  VideoCapture.h  VideoEncodeArgs.h  VideoEncoder.cpp  VideoEncoder.h  VideoProcess.h  jni_Video_Process.cpp  jni_Video_Process.h
NativeApp/app/src/main/java/com/guagua/nativeapp/: AudioPlayer.java  CameraUtils.java  CaptureAndPushActivity.java  Constants.java  DeviceUtils.java  DisplayUtil.java  EntranceActivity.java  FilterType.java  LibVideoProcess.java  LiveManager.java  MainActivity.java  MediaProcess.java  MyApplication.java  PullStreamActivity.java  PushStreamActivity.java  PushStreamer.java  Recorder.java  Recorder2.java  RotationMode.java  SDLPlayerActivity.java  StringUtils.java  TransStreamActivity.java  VideoDecoderActivity.java  VideoSizeConfig.java  WrapCameraSize.java  YUVActivity.java
NativeApp/app/src/main/java/com/guagua/nativeapp/jnibridge/: FFmpegJavaNativeBridge.java
NativeApp/app/src/main/java/com/guagua/nativeapp/nativehandler/: NativeCrashActivity.java  NativeCrashHandler.java  NativeError.java
NativeApp/app/src/main/java/com/guagua/nativeapp/recorder/: BaseMediaRecorder.java  CaptureManager.java  IMediaCallback.java  MediaConfig.java  NativeAudioRecorder.java  NativeMediaRecorder.java  NativeVideoRecorder.java
NativeApp/app/src/main/res/layout/: activity_capture_and_push.xml  activity_entrance.xml  activity_main.xml  activity_play.xml  activity_pull_stream.xml  activity_push_stream.xml  activity_push_stream2.xml  activity_recorder.xml  activity_sdlplayer.xml  activity_trans_stream.xml  activity_video_decoder.xml  activity_yuv.xml
NativeApp/app/src/test/java/com/guagua/nativeapp/: ExampleUnitTest.java
NativeApp/avcapture/: build.gradle
NativeApp/sDLActivity/: build.gradle
SDLActivity/: .project  AndroidManifest.xml
SDLActivitySource/: AndroidManifest.xml  import-summary.txt
openglESforandroid/: .gitignore
org.libsdl.testautomationvideo/: import-summary.txt
org.libsdl.testgles/: import-summary.txt
publish/: .ycm_extra_conf.py  LocalUdpSession.cpp  LocalUdpSession.h  RtmpTransBuff.cpp  RtmpTransBuff.h  RtpDataFrame.cpp  flv.bak  flv_bak  kernel.h  project.cpp  timegettime.cpp
publish/.svn/: wc.db
res/: pull_stream.md
resource/: android音频采集与推流.md  libyuv处理I420旋转与镜像.md  yuv420p赋值AVFrame.md
(+297 files in other folders)
